--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -12,6 +12,8 @@
 - text: IT-systems
   url: /IT-systems
   subitems:
+    - text: Test
+      url: /IT-systems/Test
     - text: eea.googlecharts
       url: /IT-systems/eea.googlecharts
     - text: Data Dictionary (DD)
