--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -50,6 +50,8 @@
     url: /IT-systems/SDF-Manager
   - text: eea.sparql
     url: /IT-systems/eea.sparql
+  - text: eea.googlecharts
+    url: /IT-systems/eea.googlecharts
   text: IT-systems
   url: /IT-systems
 - text: Development guidelines
