--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -54,6 +54,8 @@
     url: /IT-systems/eea.alchemy
   - text: eea.annotator
     url: /IT-systems/eea.annotator
+  - text: eea.cache
+    url: /IT-systems/eea.cache
   text: IT-systems
   url: /IT-systems
 - text: Development guidelines
