--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -60,6 +60,8 @@
     url: /IT-systems/eea.depiction
   - text: eea.elasticsearch
     url: /IT-systems/eea.elasticsearch
+  - text: eea.icons
+    url: /IT-systems/eea.icons
   text: IT-systems
   url: /IT-systems
 - text: Development guidelines
