--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -52,6 +52,8 @@
     url: /IT-systems/eea.annotator
   - text: eea.cache
     url: /IT-systems/eea.cache
+  - text: eea.daviz
+    url: /IT-systems/eea.daviz
   - text: eea.depiction
     url: /IT-systems/eea.depiction
   - text: eea.elasticsearch
