--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -46,6 +46,109 @@
       url: /IT-systems/SDF-Manager/#copyright-and-license
     text: Standard Data Form (SDF) Manager
     url: /IT-systems/SDF-Manager
+  - source: generated
+    subitems:
+    - text: Contents
+      url: /IT-systems/eea.alchemy/#contents
+    - text: Introduction
+      url: /IT-systems/eea.alchemy/#introduction
+    - text: Main features
+      url: /IT-systems/eea.alchemy/#main-features
+    - text: Planed features
+      url: /IT-systems/eea.alchemy/#planed-features
+    - text: Install
+      url: /IT-systems/eea.alchemy/#install
+    - subitems:
+      - text: Auto discover keywords, location, related items or temporal coverage
+        url: /IT-systems/eea.alchemy/#auto-discover-keywords,-location,-related-items-or-temporal-coverage
+      - text: Auto tagging
+        url: /IT-systems/eea.alchemy/#auto-tagging
+      - text: Auto relations
+        url: /IT-systems/eea.alchemy/#auto-relations
+      text: Getting started
+      url: /IT-systems/eea.alchemy/#getting-started
+    - text: Source code
+      url: /IT-systems/eea.alchemy/#source-code
+    - text: Copyright and license
+      url: /IT-systems/eea.alchemy/#copyright-and-license
+    - text: Funding
+      url: /IT-systems/eea.alchemy/#funding
+    text: EEA Alchemy
+    url: /IT-systems/eea.alchemy
+  - source: generated
+    subitems:
+    - text: Installation
+      url: /IT-systems/eea.app.visualization/#installation
+    - text: Dependencies
+      url: /IT-systems/eea.app.visualization/#dependencies
+    - text: Live demo
+      url: /IT-systems/eea.app.visualization/#live-demo
+    - text: Source code
+      url: /IT-systems/eea.app.visualization/#source-code
+    - text: Copyright and license
+      url: /IT-systems/eea.app.visualization/#copyright-and-license
+    - text: Links
+      url: /IT-systems/eea.app.visualization/#links
+    - text: Funding
+      url: /IT-systems/eea.app.visualization/#funding
+    text: EEA App Visualization
+    url: /IT-systems/eea.app.visualization
+  - source: generated
+    subitems:
+    - text: Introduction
+      url: /IT-systems/eea.daviz/#introduction
+    - text: Main features
+      url: /IT-systems/eea.daviz/#main-features
+    - text: Video Tutorials
+      url: /IT-systems/eea.daviz/#video-tutorials
+    - text: Live demos
+      url: /IT-systems/eea.daviz/#live-demos
+    - text: Architecture overview
+      url: /IT-systems/eea.daviz/#architecture-overview
+    - text: Installation
+      url: /IT-systems/eea.daviz/#installation
+    - subitems:
+      - subitems:
+        - text: Plone
+          url: /IT-systems/eea.daviz/#plone
+        - text: Zope
+          url: /IT-systems/eea.daviz/#zope
+        text: Google Maps API Key
+        url: /IT-systems/eea.daviz/#google-maps-api-key
+      text: zc.buildout
+      url: /IT-systems/eea.daviz/#zc.buildout
+    - text: Dependencies
+      url: /IT-systems/eea.daviz/#dependencies
+    - text: Source code
+      url: /IT-systems/eea.daviz/#source-code
+    - text: Copyright and license
+      url: /IT-systems/eea.daviz/#copyright-and-license
+    - text: More documentation
+      url: /IT-systems/eea.daviz/#more-documentation
+    - text: Links
+      url: /IT-systems/eea.daviz/#links
+    - text: Funding and project management
+      url: /IT-systems/eea.daviz/#funding-and-project-management
+    text: EEA Daviz
+    url: /IT-systems/eea.daviz
+  - source: generated
+    subitems:
+    - text: Introduction
+      url: /IT-systems/eea.googlecharts/#introduction
+    - text: Main features
+      url: /IT-systems/eea.googlecharts/#main-features
+    - text: Dependencies
+      url: /IT-systems/eea.googlecharts/#dependencies
+    - text: Live demos
+      url: /IT-systems/eea.googlecharts/#live-demos
+    - text: Source code
+      url: /IT-systems/eea.googlecharts/#source-code
+    - text: Copyright and license
+      url: /IT-systems/eea.googlecharts/#copyright-and-license
+    - text: Funding
+      url: /IT-systems/eea.googlecharts/#funding
+    text: EEA Google Charts
+    url: /IT-systems/eea.googlecharts
   text: IT-systems
   url: /IT-systems
 - text: Development guidelines
